# Geofence-Project

./: .gitignore  CNAME  index.html  package-lock.json  package.json  tsconfig.json  users.json  vite.config.ts
assets/: index-2f7b1ae0.js  index-e68b3241.css
backend/app/: pyproject.toml
backend/app/app/: .env  main.py
backend/app/app/config/: settings.py
backend/app/app/db/: database.py
backend/app/app/services/addusers/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/attendance/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/attendancetable/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/auth/: manager.py  router.py  schema.py
backend/app/app/services/auth/registered_users/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/company/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/companyevent/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/companyholiday/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/companyuser/: model.py  repository.py
backend/app/app/services/users/: model.py  repository.py  router.py  schema.py  service.py
backend/app/app/services/users2/: model.py  repository.py  router.py  schema.py  services.py
backend/app/app/utility/: generate_subdomain.py  get_tenant_name.py  tenant_info.py
documents/: NamingConventions.md
src/: App.tsx  UserTable.tsx  main.tsx  types.ts
(+115 files in other folders)
